# whatbroke

./: .gitignore  README.md  ROADMAP.md  __init__.py  build-packages.sh  cli.py  install.sh  pyproject.toml  result.py  uninstall.sh
.github/workflows/: release.yml
checks/: __init__.py  disk.py  docker.py  hardware.py  logs.py  networking.py  scheduled.py  security.py  services.py  systemd.py
scripts/: build-release.sh  prepare-release.sh
tests/: conftest.py  test_cli.py  test_containers.py  test_disk.py  test_firewall.py  test_hardware.py  test_logs.py  test_mail.py  test_networking.py  test_scheduled.py  test_scheduled_permissions.py  test_security.py  test_services.py  test_sysctl.py  test_users.py
whatbroke/: cli.py  result.py
whatbroke/checks/: _packaging.py  containers.py  disk.py  firewall.py  hardware.py  logs.py  mail.py  networking.py  scheduled.py  security.py  services.py  sysctl.py  users.py
