[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatbroke"
version = "0.3.2"
description = "Linux system diagnostics — find what's broken, fix what matters"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Emerson", email = "emerson@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
whatbroke = "whatbroke.cli:main"

[project.urls]
Homepage   = "https://github.com/emmolab/whatbroke"
Repository = "https://github.com/emmolab/whatbroke"
Issues     = "https://github.com/emmolab/whatbroke/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["whatbroke*"]
